--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ tqdm>=4.66.0,<5.0.0
 pandas>=2.2.0,<3.0.0
 pyarrow>=16.0.0,<18.0.0
 astropy>=6.0.0,<7.0.0
+torch>=2.2.0,<3.0.0
+scikit-learn>=1.4.0,<2.0.0
