--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ pyarrow>=16.0.0,<18.0.0
 astropy>=6.0.0,<7.0.0
 torch>=2.2.0,<3.0.0
 scikit-learn>=1.4.0,<2.0.0
+catboost==1.2.8
+joblib==1.5.2
+lightgbm==4.6.0
+numpy==2.3.3
+xgboost==3.0.5
