--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -4,5 +4,7 @@ pandas==2.1.4
 numpy==1.26.2
 scikit-learn==1.3.2
 xgboost==2.0.3
+lightgbm==4.3.0
+catboost==1.2.5
 tensorflow==2.15.0
 joblib==1.3.2
