--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -1,10 +1,10 @@
 flask==3.0.0
 flask-cors==4.0.0
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-xgboost==2.0.3
-lightgbm==4.3.0
-catboost==1.2.5
-tensorflow==2.17.1
-joblib==1.3.2
+pandas>=2.2.0,<3.0.0
+numpy==2.3.3
+scikit-learn>=1.4.0,<2.0.0
+xgboost==3.0.5
+lightgbm==4.6.0
+catboost==1.2.8
+tensorflow==2.20.0
+joblib==1.5.2
