--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build: ./backend
@@ -20,6 +18,8 @@ services:
     container_name: exodetect-frontend
     ports:
       - "8080:80"
+    environment:
+      - API_BASE_URL=${API_BASE_URL:-http://localhost:3000/api}
     depends_on:
       - backend
     restart: unless-stopped
