--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,12 @@
+# Use nginx to serve static frontend files
 FROM nginx:alpine
 
-# Copy frontend files to Nginx
+# Copy frontend files into nginx html directory
 COPY . /usr/share/nginx/html
 
-EXPOSE 80
+# Copy startup script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Start nginx via entrypoint (this will generate config.js)
+ENTRYPOINT ["/entrypoint.sh"]
